# PurpleDBMS

./: CMakeLists.txt  btree.cpp  btree.h  main.cpp
include/purpledb/: btree.h  kv_store.h
src/: btree.cpp  kv_store.cpp
tests/: test_btree.cpp  test_kv_store.cpp  test_main.cpp  test_utils.h
